kata 9 solved