@@ -10,6 +10,7 @@ import util.DataUtil;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /*
     Goal: Combine videos and bookmarks by index (StreamUtils.zip) (https://github.com/poetix/protonpack)
@@ -17,12 +18,21 @@ import java.util.Map;
     Output: List of ImmutableMap.of("videoId", "5", "bookmarkId", "3")
 */
 public class Kata8 {
-    public static List<Map> execute() {
+    public static List<String> execute() {
         List<Movie> movies = DataUtil.getMovies();
         List<Bookmark> bookMarks = DataUtil.getBookMarks();
 
-        // StreamUtils.zip()
 
-        return ImmutableList.of(ImmutableMap.of("videoId", 5, "bookmarkId", 3));
+        var movie = movies.stream().map(
+                movie1 -> Map.of("videoId",movie1.getId()));
+        var bookMark = bookMarks.stream().map(
+                bookmark1 -> Map.of("videoId",bookmark1.getId()));
+        // StreamUtils.zip()
+        var zip = StreamUtils.zip(movie,
+                        bookMark,
+                        (a, b) -> a +""+ b)
+                        .collect(Collectors.toList());
+
+        return zip;
     }
 }
